--- a/templates/base.html
+++ b/templates/base.html
@@ -1,118 +1,101 @@
 {% load static %}
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    {% block meta %}
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% endblock %}
-
-    {% block extrameta %}
-    {% endblock %}
-    
-    <!-- Bootstrap CSS -->
-    {% block corecss %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    {% endblock %}
-
-    {% block extracss %}
-    {% endblock %}
-
-    {% block corejs %}
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    {% endblock %}
-
-    {% block extrajs %}
-    {% endblock %}
-    
-
-    <title>Veggie and Fruit in a Box {% block extratitle %}{% endblock %}</title>
-  </head>
-  <body>
-    <header class="container-fluid fixed-top"></header>
-    <div class="row">
-    <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-lg-left">
-        <a href="{% url 'home' %}" class=" nav-link main-logo-link"> 
-        <h2 class="logo-font text-black my-0"><strong> Veggie and Fruit</strong> in a Box</h2>
-        </a>
-    </div>
-    <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <form method="GET" action="{% url 'products' %}">
-                    <div class="input-group w-100">
-                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
-                        <div class="input-group-append">
-                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                                <span class="icon">
-                                    <i class="fas fa-search"></i>
-                                </span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-    
-    </div>
-    <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-        <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-        <li class="list inline-item dropdown">
-                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="text-center">
-                                <div><i class="fas fa-user fa-lg"></i></div>
-                                <p class="my-0">My Account</p>
-                            </div>
-                        </a>
-        <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                            {% if request.user.is_authenticated %}
-                                {% if request.user.is_superuser %}
-                                    <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
-                                {% endif %}
-                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                            {% else %}
-                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                            {% endif %}
-                        </div>
-        </li>
-        <li class="list-inline-item">
-        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
-                            <div class="text-center">
-                                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                                <p class="my-0">
-                                    {% if grand_total %}
-                                        ${{ grand_total|floatformat:2 }}
-                                    {% else %}
-                                        $0.00
-                                    {% endif %}
-                                </p>
-                            </div>
-                        </a>
-        </li>
-        
-
-        </ul>
-    
-    
-    </div>
-    
-
-    </div>
-
-
-
-    {% if messages %}
-    <div class="message-container"></div>
-    {% endif %}
-
-    {% block pageheader %}
-    {% endblock %}
-
-    {% block content %}
-    {% endblock %}
-
-    {% block postloadjs %}
-    {% endblock %}
-  </body>
+   <head>
+      <!-- Required meta tags -->
+      {% block meta %}
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      {% endblock %}
+      {% block extrameta %}
+      {% endblock %}
+      <!-- Bootstrap CSS -->
+      {% block corecss %}
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+      <link href="{% static 'css/base.css' %}" rel='stylesheet'>
+      {% endblock %}
+      {% block extracss %}
+      {% endblock %}
+      {% block corejs %}
+      <script src="https://kit.fontawesome.com/29685d497c.js" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+      {% endblock %}
+      {% block extrajs %}
+      {% endblock %}
+      <title>Veggie and Fruit in a Box {% block extratitle %}{% endblock %}</title>
+   </head>
+   <body>
+      <header class="container-fluid fixed-top"></header>
+      <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-lg-left">
+            <a href="{% url 'home' %}" class=" nav-link main-logo-link">
+               <h2 class="logo-font text-black my-0"><strong> Veggie and Fruit</strong> in a Box</h2>
+            </a>
+         </div>
+         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+            <form method="GET" action="">
+               <div class="input-group w-100">
+                  <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                  <div class="input-group-append">
+                     <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                     <span class="icon">
+                     <i class="fas fa-search"></i>
+                     </span>
+                     </button>
+                  </div>
+               </div>
+            </form>
+         </div>
+         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+               <li class="list inline-item dropdown">
+                  <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     <div class="text-center">
+                        <div><i class="fas fa-user fa-lg"></i></div>
+                        <p class="my-0">My Account</p>
+                     </div>
+                  </a>
+                  <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                     {% if request.user.is_authenticated %}
+                     {% if request.user.is_superuser %}
+                     <a href="" class="dropdown-item">Product Management</a>
+                     {% endif %}
+                     <a href="" class="dropdown-item">My Profile</a>
+                     <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                     {% else %}
+                     <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                     <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                     {% endif %}
+                  </div>
+               </li>
+               <li class="list-inline-item">
+                  <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                     <div class="text-center">
+                        <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                        <p class="my-0">
+                           {% if grand_total %}
+                           ${{ grand_total|floatformat:2 }}
+                           {% else %}
+                           $0.00
+                           {% endif %}
+                        </p>
+                     </div>
+                  </a>
+               </li>
+            </ul>
+         </div>
+      </div>
+      {% if messages %}
+      <div class="message-container"></div>
+      {% endif %}
+      {% block pageheader %}
+      {% endblock %}
+      {% block content %}
+      {% endblock %}
+      {% block postloadjs %}
+      {% endblock %}
+   </body>
 </html>
