--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,16 +10,24 @@
 {% endblock %}
 
 {% block content %}
-<div class="container h-100">
-<div class="row h-100">
-<div class="col-7 col-md-6 my-auto">
-<h1 class="display-4 logo-font text-black">In Season Vegetables</h1>
-</div>
-<div class="my-5">
-<h4>
-<a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-</h4>
-</div>
-</div>
-</div>
+    <div class="container h-100">   
+
+        <div class="row">
+            <div class="col-md-12 ">
+                    <div class="row">
+                        <div class="col-md-8 ">
+                <h1 class="display-4 logo-font text-white">
+                    All produce is in season and locally sourced
+                </h1>
+
+                        </div>
+                        <div class="my-auto">
+                            <h4>
+                                <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                            </h4>
+                        </div>
+                    </div>
+           </div>
+        </div>
+    </div>    
 {% endblock %}
