--- a/templates/base.html
+++ b/templates/base.html
@@ -28,11 +28,11 @@
       <title>Veggie and Fruit in a Box {% block extratitle %}{% endblock %}</title>
    </head>
    <body>
-      <header class="container-fluid fixed-top"></header>
+      <header class="container-fluid fixed-top">
       <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-lg-left">
             <a href="{% url 'home' %}" class=" nav-link main-logo-link">
-               <h2 class="logo-font text-black my-0"><strong> Veggie and Fruit</strong> in a Box</h2>
+               <h2 class="logo-font text-black my-0">Veggie and Fruit <p>in a Box</p></h2>
             </a>
          </div>
          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -51,8 +51,8 @@
          </div>
          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
             <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-               <li class="list inline-item dropdown">
-                  <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               <li class="list-inline-item dropdown">
+                  <a class="text-black nav-link" href="" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      <div class="text-center">
                         <div><i class="fas fa-user fa-lg"></i></div>
                         <p class="my-0">My Account</p>
@@ -88,6 +88,22 @@
             </ul>
          </div>
       </div>
+      <div id="delivery-banner" class="row text-center">
+        <div class="col bg-black text-white">
+                <h4 class="logo-font my-1"> Free delivery on order over ${{ free_shipping_threshold}}!></h4>
+        </div>
+        </div>
+        <div class="row bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                {% include 'includes/mobile_top_header.html' %}
+                {% include 'includes/main_nav.html' %}
+            </nav>
+        </div>
+
+      </header>
       {% if messages %}
       <div class="message-container"></div>
       {% endif %}
