--- a/static/css/base.css
+++ b/static/css/base.css
@@ -62,6 +62,16 @@ body{
     border: 1px solid black !important;
 }
 
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
+}
+
 /*MEDIA QUERIES*/
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
@@ -84,3 +94,13 @@ body{
         padding-top: 164px;
     }
 }
+
+/* push down the top a little when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
+    }
