--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -7,54 +7,29 @@
             All Produce
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item">By Box Rating</a>
-                <a href="" class="dropdown-item">By Category</a>
+                <a href="" class="dropdown-item">Fruit</a>
+                <a href="" class="dropdown-item">Vegetable</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>    
     </li>
     <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#"id="all-products-link" data-toggle="dropdown" aria-haspop="true" aria-expanded="false">
-            All Our Boxes
+            Category
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item">By Box Rating</a>
-                <a href="" class="dropdown-item">By Category</a>
-                <a href="" class="dropdown-item">All Products</a>
+                <a href="{% url 'products' %}?category=Fruit" class="dropdown-item">Fruit</a>
+                <a href="{% url 'products' %}?category=Vegetable" class="dropdown-item">Vegetables</a>
+                <a href="{% url 'products' %}?category=Boxes" class="dropdown-item">All Boxes</a>
             </div>    
     </li>
     <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#"id="all-products-link" data-toggle="dropdown" aria-haspop="true" aria-expanded="false">
-            Fruit Only Boxes
+            Recipes
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item">By Box Rating</a>
+                <a href="" class="dropdown-item">By Season</a>
                 <a href="" class="dropdown-item">By Category</a>
-                <a href="" class="dropdown-item">All Products</a>
-            </div>    
-    </li>
-    <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#"id="all-products-link" data-toggle="dropdown" aria-haspop="true" aria-expanded="false">
-            Vegetables Only Boxes
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item">By Box Rating</a>
-                <a href="" class="dropdown-item">By Category</a>
-                <a href="" class="dropdown-item">All Products</a>
-            </div>    
-    </li>
-    <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#"id="all-products-link" data-toggle="dropdown" aria-haspop="true" aria-expanded="false">
-            Sales
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item">By Box Rating</a>
-                <a href="" class="dropdown-item">By Category</a>
-                <a href="" class="dropdown-item">All Products</a>
+                <a href="" class="dropdown-item">All Recipes</a>
             </div>    
     </li>
     </ul>
