--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -7,8 +7,9 @@
             All Produce
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">Fruit</a>
-                <a href="" class="dropdown-item">Vegetable</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
+                <a href="{% url 'products' %}?sort=price&direction=desc" class="dropdown-item">Price: High to Low</a>
+                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">Price: Low to High</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>    
     </li>
