--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -3,14 +3,14 @@
 
     
     <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#"id="all-products-link" data-toggle="dropdown" aria-haspop="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#"id="all-products-link" data-toggle="dropdown" aria-haspop="true" aria-expanded="false"> 
             All Produce
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
                 <a href="{% url 'products' %}?sort=price&direction=desc" class="dropdown-item">Price: High to Low</a>
                 <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">Price: Low to High</a>
-                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
+                <a href="{% url 'products' %}?category=Fruit,Vegetable,Box" class="dropdown-item">All Products</a>
             </div>    
     </li>
     <li class="nav-item dropdown">
@@ -20,7 +20,7 @@
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="{% url 'products' %}?category=Fruit" class="dropdown-item">Fruit</a>
                 <a href="{% url 'products' %}?category=Vegetable" class="dropdown-item">Vegetables</a>
-                <a href="{% url 'products' %}?category=Boxes" class="dropdown-item">All Boxes</a>
+                <a href="{% url 'products' %}?category=Box" class="dropdown-item">All Boxes</a>
             </div>    
     </li>
     <li class="nav-item dropdown">
