--- a/static/css/base.css
+++ b/static/css/base.css
@@ -72,6 +72,19 @@ a.category-badge > span.badge:hover {
     color: #fff !important;
 }
 
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
+}
+
+
 /*MEDIA QUERIES*/
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
