--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -42,6 +42,7 @@
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                        <p class="my-0"><strong>Size: </strong>{% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
                                         <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
                                     </td>
                                     <td class="py-3">
@@ -72,11 +73,14 @@
                                                             </span>
                                                         </button>
                                                     </div>
+                                                    {% if item.product.has_sizes %}
+                                                        <input type="hidden" name="product_size" value="{{ item.size }}">
+                                                    {% endif %}
                                                 </div>
                                             </div>
                                         </form>
                                         <a class="update-link text-info"><small>Update</small></a>
-                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
+                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0">${{ item.product.price }}</p>
@@ -126,8 +130,6 @@
         </div>
     </div>
 {% endblock %}
-<<<<<<< HEAD
-=======
 
 {% block postloadjs %}
 {{ block.super }}
@@ -144,7 +146,9 @@
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
+        var size = $(this).data('size');
         var url = `/bag/remove/${itemId}`;
+        var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
 
         $.post(url, data)
          .done(function() {
@@ -153,4 +157,3 @@
     })
 </script>
 {% endblock %}
->>>>>>> 165405b38ca138bdb5fb6aedef5797e3b763ab18
