--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,14 +1,13 @@
-html{
-    height:100%;
-
+html {
+    height: 100%;
 }
 
-body{
-    background :url('/media/homepage_background.jpg') no-repeat center center fixed;
+body {
+    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
     background-size: cover;
-    height :calc(100vh-164px);
+    height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Lato';    
+    font-family: 'Lato';
 }
 
 /* from Bulma */
@@ -37,7 +36,6 @@ body{
 .btn-black {
     background: black;
     color: white;
-
 }
 
 .btn-outline-black {
@@ -52,6 +50,7 @@ body{
     background: black;
     color: white !important;
 }
+
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
@@ -68,6 +67,10 @@ body{
 
 .border-black {
     border: 1px solid black !important;
+}
+
+.bg-black {
+    background: #000 !important;
 }
 
 .overlay {
@@ -93,14 +96,14 @@ a.category-badge > span.badge:hover {
     right: 10px;
 }
 
-.btt-link ,
-.update-link ,
-.remove-item{
+.btt-link,
+.update-link,
+.remove-item {
     cursor: pointer;
 }
 
+/* -------------------------------- Media Queries */
 
-/*MEDIA QUERIES*/
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
   .container {
@@ -123,7 +126,7 @@ a.category-badge > span.badge:hover {
     }
 }
 
-/* push down the top a little when navbar is collapsed on mobile */
+/* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
@@ -132,3 +135,4 @@ a.category-badge > span.badge:hover {
     body {
         height: calc(100vh - 116px);
     }
+}
