--- a/static/css/base.css
+++ b/static/css/base.css
@@ -102,7 +102,26 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
-/* -------------------------------- Media Queries */
+/* -Toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
+
+
+/*  Media Queries */
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
