--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -1,6 +1,10 @@
 <div class="collapse navbar-collapse" id="main-navb">
 <ul class="navbar-nav w-auto mx-auto " list-style-type="none">
-
+    <li class="nav-item d-block d-md-none">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home'%}" id="home-link"> 
+            Home
+            </a>
+    </li>
     
     <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#"id="all-products-link" data-toggle="dropdown" aria-haspop="true" aria-expanded="false"> 
