signup and unsuscribe functionality added

--- a/newsletters/templates/newsletters/unsubscribe.html
+++ b/newsletters/templates/newsletters/unsubscribe.html
@@ -13,39 +13,27 @@
 {% endblock %}
 
 
-
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col">
                 <hr>
-                    <h2 class="logo-font mb-4">SIgn Up for Our Newslettter</h2>
+                    <h2 class="logo-font mb-4">Unsubscribe from Our Newslettter</h2>
                 <hr>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-lg-6">
                 <p class="text-muted"></p>
-                    {% if messages %}
-                        {% for message in messages %}
-                         <div {% if message.tags %} class="{{messag.tags}}" {% endif %} role="alert">
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            {{ message }}
-                            </button>
-                            </div>   
-
-                        {% endfor%}
-                    {% else %}    
                     <form method="POST">{% csrf_token %}
                         <div class ="input-group">
-                        {% crispy form %}
+                        {{ form }}
                             <span class="input-group-btn">
-                            <button class="btn btn-default" type="submit"> Subscribe</button>
+                            <button class="btn btn-default" type="submit"> Unsubscribe</button>
                             </span>
                         </div>
                     </form>
-                    {% endif %}
             </div>
             
         </div>
