--- a/newsletters/templates/newsletters/sign_up.html
+++ b/newsletters/templates/newsletters/sign_up.html
@@ -18,38 +18,31 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-lg-6 col-lg-offset-3">
                 <hr>
                     <h2 class="logo-font mb-4">SIgn Up for Our Newslettter</h2>
                 <hr>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <p class="text-muted"></p>
-                    {% if messages %}
-                        {% for message in messages %}
-                         <div {% if message.tags %} class="{{messag.tags}}" {% endif %} role="alert">
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            {{ message }}
-                            </button>
-                            </div>   
-
-                        {% endfor%}
-                    {% else %}    
+                {% if messages %}
+                    {% for message in messages %}
+                         <div {% if message.tags %} class="{{message.tags}}" {% endif %} role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
+                             {{ message }}
+                        </div>   
+                    {% endfor%}
+                {% else %}    
                     <form method="POST">{% csrf_token %}
                         <div class ="input-group">
-                        {% crispy form %}
+                        {{ form|crispy }}
                             <span class="input-group-btn">
                             <button class="btn btn-default" type="submit"> Subscribe</button>
                             </span>
                         </div>
                     </form>
-                    {% endif %}
+                {% endif %}
             </div>
             
         </div>
     </div>
+    
 
 {% endblock %}
-
