control panel for newsletter started, newsletter list added

--- a/newsletters/templates/newsletters/unsubscribe_email.html
+++ b/newsletters/templates/newsletters/unsubscribe_email.html
@@ -4,7 +4,7 @@
 <title>Unsubscribe Email</title>
 <body>
 <h2> Sorry to see you go, the Vegetable and Fruit in a Box Team</h2>
-<p> Your have now unsubscribed from our newseltter, please let us know if there was an issue with our services</p>
+<p> Your have now unsubscribed from our newsletter, please let us know if there was an issue with our services</p>
 </body>
 </head>
 </html>
