--- a/control_panel/templates/control_panel/control_newsletter.html
+++ b/control_panel/templates/control_panel/control_newsletter.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html> 
 
-{% extends "control_base.html%}
-
+{% extends "control_base.html"%}
+{% load crispy_forms_tags%}
 {% block content%}
-        
-          <h2>Section title</h2>
-
-
+<h1>Section title</h1>
+<form method ="POST">{% csrf_token %}
+    {{form|crispy}}
+</form>
+<button class="btn btn-default" type="submit">Save</button>
 {% endblock%}
