--- a/control_panel/templates/control_panel/control_newsletter_list.html
+++ b/control_panel/templates/control_panel/control_newsletter_list.html
@@ -2,6 +2,7 @@
 {% extends "control_base.html" %}
 
 {% block content %}
+<div class="overlay"></div>
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <div class="row">
         <div class="col-sm-10">
@@ -36,5 +37,6 @@
             </tbody>
         </table>
     </div>
+    {% include ".pagination.html"%}
 </div>
 {% endblock %}
