fixed allauth signin and logout

--- a/control_panel/templates/control_panel/control_newsletter_delete.html
+++ b/control_panel/templates/control_panel/control_newsletter_delete.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 
-{% extends "control_base.html"%}
+{% extends "base.html"%}
 {% load crispy_forms_tags%}
 {% block content%}
 <h1>Section title</h1>
