--- a/newsletters/templates/newsletters/sign_up_email.html
+++ b/newsletters/templates/newsletters/sign_up_email.html
@@ -5,7 +5,7 @@
 <body>
 <h2> Welcome to Vegetable and Fruit in a Box Newsletter</h2>
 <p> Thank you for joining us</p>
-<p> To unsubscribe visit this link : <a href="{% url "newsletters:newsletter_unsubcribe" %}">Unsubscribe</a></p>
+<p> To unsubscribe visit this link : <a href="{% url "newsletter_unsubscribe" %}">Unsubscribe</a></p>
 </body>
 </head>
 </html>
