--- a/static/css/base.css
+++ b/static/css/base.css
@@ -275,7 +275,7 @@ input[name='q']::placeholder {
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
-        position: fixed;
+        /*position: fixed;*/
         top: 0;
         right: 0;
         left: 0;
