--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,8 @@
                     </h4>
                     
                     <h4>
-                        <a href="{% url 'newsletter_signup' %}" class="newsletter-signup-button btn btn-success btn-lg rounded-0 text-uppercase py-3">Signup to our Newsletter</a>                    
+                        <a href="{% url 'newsletter_signup' %}" class="newsletter-signup-button btn btn-success btn-lg rounded-0 text-uppercase py-3">Signup to our Newsletter</a>
+                        <a href="{% url 'newsletter_unsubscribe' %}" class="newsletter-signup-button btn btn-warning btn-lg rounded-0 text-uppercase py-3">Unsuscribe from our Newsletter</a>                    
                     </h4>
                 </div>
             </div>
