--- a/control_panel/templates/control_panel/control_newsletter.html
+++ b/control_panel/templates/control_panel/control_newsletter.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
-{% load static %}
+
+{% load crispy_forms_tags%}
 
 {% block page_header %}
     <div class="container header-container">
@@ -25,10 +26,9 @@
             <div class="col-12 col-md-6">
                     <form method ="POST">{% csrf_token %}
                         {{form|crispy}}
-                        <div class="text-right">
-                            <a class="btn btn-outline-black rounded-0" href="#">Cancel</a>
-                            <button class="btn btn-black rounded-0" type="submit">Save Newsletter</button>
-                        </div>
+                        <button class="btn btn-black rounded-0" type="submit"><a href="#">Save Newsletter</a></button>                       
                     </form>
-                    
+            </div>
+        </div>
+    </div>               
 {% endblock%}
