--- a/static/css/base.css
+++ b/static/css/base.css
@@ -111,7 +111,10 @@ a.category-badge > span.badge:hover {
 input[name='q']::placeholder {
     color: #aab7c4;
 }
-
+/* newlsetter Signup */
+.requiredField{
+    display: none;
+}
 /* -Toasts */
 
 .message-container {
