newsletter crispy form updated

--- a/control_panel/templates/control_panel/control_newsletter_list.html
+++ b/control_panel/templates/control_panel/control_newsletter_list.html
@@ -24,7 +24,7 @@
     
         <div class="table-responsive table-hover">
             <table class="table">
-                <thead>
+                <thead class="thead-dark">
                     <th>Subject</th>
                     <th>Status</th>
                     <th>Created</th>
@@ -51,7 +51,7 @@
             </table>
         </div>
                 <div class= "col-sm-2">
-            <a href="{% url 'control_newsletter' %}"><button type="button" class="btn btn-success">New Newsletter</button></a>
+            <a href="{% url 'control_newsletter' %}"><button type="button" class="btn btn-light btn-outline-dark">New Newsletter</button></a>
         </div>
     </div>
     <div class="col-sm-2">
