--- a/control_panel/templates/control_panel/control_newsletter.html
+++ b/control_panel/templates/control_panel/control_newsletter.html
@@ -24,8 +24,9 @@
         </div>
         <div class="row">
             <div class="col-12 col-md-6">
-                    <form method ="POST">{% csrf_token %}
-                        {{form|crispy}}
+                    <form method ="POST">
+                    {% csrf_token %}
+                    {{ form|crispy }}
                         <button class="btn btn-black rounded-0" type="submit"><a href="#">Save Newsletter</a></button>                       
                     </form>
             </div>
