--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,11 +24,12 @@
                     <h4>
                         <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>                        
                     </h4>
-                    
-                    <h4>
-                        <a href="{% url 'newsletter_signup' %}" class="newsletter-signup-button btn btn-success btn-lg rounded-0 text-uppercase py-3">Signup to our Newsletter</a>
-                        <a href="{% url 'newsletter_unsubscribe' %}" class="newsletter-signup-button btn btn-warning btn-lg rounded-0 text-uppercase py-3">Unsuscribe from our Newsletter</a>                    
-                    </h4>
+                </div>
+                <div class= "my-5">
+                    <h3>
+                        <a href="{% url 'newsletter_signup' %}" class="newsletter-signup-button btn btn-light btn-sm rounded-0  py-3">Signup to our Newsletter</a>
+                        <a href="{% url 'newsletter_unsubscribe' %}" class="newsletter-signup-button btn btn-light btn-sm rounded-0  py-3">Unsuscribe from our Newsletter</a>
+                    </h3>
                 </div>
             </div>
         </div>
