--- a/control_panel/templates/control_panel/control_newsletter_list.html
+++ b/control_panel/templates/control_panel/control_newsletter_list.html
@@ -24,7 +24,7 @@
     
         <div class="table-responsive table-hover">
             <table class="table">
-                <thead class="thead-dark">
+                <thead class="thead">
                     <th>Subject</th>
                     <th>Status</th>
                     <th>Created</th>
