--- a/static/css/base.css
+++ b/static/css/base.css
@@ -115,7 +115,7 @@ a.category-badge > span.badge:hover {
 input[name='q']::placeholder {
     color: #aab7c4;
 }
-/* newlsetter Signup */
+
 
 /* -Toasts */
 
@@ -337,4 +337,10 @@ input[name='q']::placeholder {
     .increment-qty, .decrement-qty {
         padding: .25rem .5rem !important;
     }
+}
+
+/*Newsletter list */
+.table .thead th {
+    color: #6c757d!important;
+    border-color: #454d55;
 }
