--- a/control_panel/templates/control_panel/control_newsletter_detail.html
+++ b/control_panel/templates/control_panel/control_newsletter_detail.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block page_header %}
     <div class="container header-container">
@@ -17,32 +18,35 @@
             <div class="col-12 col-md-6">
                 <hr>
                 <h2 class="logo-font mb-4">Newsletter Management</h2>
-                <h5 class="text-muted"> Newsletter " {{ newsletter.subject }} " Details</h5>
+                <h5 class="text-muted "> Newsletter " {{ newsletter.subject }} " Details</h5>
                 <hr>
             </div>
         </div>
  
 
-             <form method ="POST">{% csrf_token %}
-                        {{form|crispy}}
-                    {{ newsletter.body }}    
-                        <div class="text-right">
 
-                        </div>
-            
-             <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'control_newsletter_list' %}">Back to List</a>
-                        <a class="text-danger" href="{% url 'control_newsletter_delete' newsletter.id %}">Delete</a>
-                           
+    <form method="POST">
+    {% csrf_token %}
+
+    <div class="form-group ">
+        <label for="staticcontent" class="col-sm-2 col-form-label">Newsletter content</label>
+            <div class="col-sm-10">
+                <input type="text" readonly class="form-control-plaintext" id="staticcontent" value="{{ newsletter.body }}">
             </div>
-            
-            
-            
-            </form>
+    </div>
+    <div class="form-group ">
+        <label for="cretedtime" class="col-sm-2 col-form-label">Created</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control-plaintext" id="staticcreated" value="{{ newsletter.created }}">
+            </div>
+    </div>
 
+        <a href="{% url 'control_newsletter_list' %}"><button type="button" class="btn btn-light btn-outline-dark">Back to List</button></a>
+    </form>
 
 
     </div>
 
 
 {% endblock %}
+
