--- a/control_panel/templates/control_panel/control_newsletter.html
+++ b/control_panel/templates/control_panel/control_newsletter.html
@@ -26,7 +26,7 @@
             <div class="col-12 col-md-6">
                     <form method ="POST">{% csrf_token %}
                         {{form|crispy}}
-                        <button class="btn btn-black rounded-0" type="submit"><a href="#">Save Newsletter</a></button>                       
+                        <button class="btn btn-black rounded-0" type="submit">Save Newsletter</button>                       
                     </form>
             </div>
         </div>
