--- a/control_panel/templates/control_panel/control_newsletter_list.html
+++ b/control_panel/templates/control_panel/control_newsletter_list.html
@@ -51,7 +51,7 @@
             </table>
         </div>
                 <div class= "col-sm-2">
-            <a href="{% url 'control_newsletter' %}"><button type="button" class="btn btn-light btn-outline-dark">New Newsletter</button></a>
+            <a href="{% url 'control_newsletter' %}" class="newsletter-new"><button type="button" class="btn btn-light btn-outline-dark">New</button></a>
         </div>
     </div>
     <div class="col-sm-2">
