--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: url('media/homepage_background.jpg') no-repeat center center fixed;
+    background: url('/media/homepage_background.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
@@ -19,7 +19,19 @@ img{
 #topnav{
     display: flex;
 }
+/*Newsletter*/
+.newsletter-new{
+    display: block;
+    margin: 0 auto;
+    width: 50px;
+}
+/*paginator*/
 
+.pagination-sest{
+   display: block;
+    margin: 0 auto;
+    width: 50px; 
+}
 /* from Bulma */
 .icon {
     align-items: center;
