--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
         
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-                <img src="media/Logo.jpg" alt="" class="logo-style">
+                <img src="/media/Logo.jpg" alt="" class="logo-style">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link" >
                     <h2 class="logo-font text-black my-0">Vegetables and Fruit in a Box</h2>
                 </a>
@@ -144,17 +144,6 @@
     {% block content %}
     {% endblock %}
 
-    {% block footer%}
-    <footer class="text-muted">
-        <div class="container">
-            <p class="float-right">
-            <a href="#">Back to top</a>
-            </p>
-            <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-            <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.5/getting-started/introduction/">getting started guide</a>.</p>
-            </div>
-            </footer>
-    {% endblock%}
     {% block postloadjs %}
     <script type="text/javascript">
         $('.toast').toast('show');
