--- a/products/templates/products/product_deal.html
+++ b/products/templates/products/product_deal.html
@@ -8,7 +8,7 @@
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
-            <div class="col"></div>
+            <div class="col">99p0p-0[=]8]-]]-9-]</div>
         </div>
     </div>
 {% endblock %}
