--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: url('/media/homepage_background.jpg') no-repeat center center fixed;
+   
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
@@ -14,6 +14,21 @@ img{
     width: 80px;
     float: left;
 
+}
+
+.m-46{
+    margin-top: 46px;
+}
+
+.landing-pic{
+     background: url('/media/homepage_background.jpg') no-repeat center top;
+     background-size: contain;
+}
+
+.fader {
+    background-color: rgba(255,255,255,0.2);
+    padding: 20px 0;
+    font-size: 3rem;
 }
 
 #topnav{
@@ -361,4 +376,6 @@ input[name='q']::placeholder {
 /*Subscribe and Unsuscribe forms */
 .emailinput {
     border-radius: 0rem;
+    display:block;
+    
 }
