--- a/newsletters/templates/newsletters/sign_up.html
+++ b/newsletters/templates/newsletters/sign_up.html
@@ -16,7 +16,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">
+    <div class="container news-splash">
         <div class="row">
             <div class="col-lg-6 col-lg-offset-3">
                 <hr>
